# kchr-dictionary-rest-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: README.ru.md
openapi/: openapi.json
scripts/: start.dev.sh  start.prod.sh
src/app/application/contracts/dictionary/: request.py  response.py
src/app/application/usecases/: dictionary.py
src/app/domain/common/: value_objects.py
src/app/domain/dictionary/: entities.py  repositories.py  value_objects.py
src/app/infrastructure/: config.py
src/app/infrastructure/data_access/migrations/versions/: ab27295f59cd_dictionary_item_table_initialized.py
src/app/infrastructure/data_access/models/: __init__.py  base.py  dictionary.py
src/app/infrastructure/data_access/repositories/: dictionary.py
src/app/infrastructure/di/: main.py
src/app/infrastructure/di/providers/: adapters.py  usecases.py
src/app/main/: web_api.py
src/app/presentation/web_api/routers/: __init__.py  dictionary.py
src/app/presentation/web_api/schemas/: items.py  limit_offset.py  translations.py
tests/domain/dictionary/: test_dictionary_item.py
tests/web_api/: conftest.py  test_dictionary_router.py  test_health_router.py
